--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="Benfica">#e53935</color>
+    <color name="Porto">#1565c0</color>
+    <color name="Sporting">#2e7d32</color>
 </resources>
