--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,5 +7,10 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+    
+    <style name="Benfica">
+        <item name="colorPrimary">@color/Benfica</item>
+        <item name="colorAccent">#ffff</item>
+    </style>
 
 </resources>
