Changed project theme from Football to Pokemon. Added the right resources. Added support to xxhdpi density.

--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/charmander_wp_h"
+    android:background="@drawable/charmander_wp_l"
     tools:context=".MainActivity">
 
     <TextView
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:text="@string/escolhe_um_pokemon"
@@ -36,7 +37,7 @@
         android:contentDescription="@string/charmander"
         android:onClick="setFire"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/charmander2" />
 
     <ImageButton
@@ -45,38 +46,33 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:background="@color/Water"
         android:contentDescription="@string/squirtle"
         android:onClick="setWater"
-        app:layout_constraintEnd_toStartOf="@+id/bulbasaur"
-        app:layout_constraintStart_toEndOf="@+id/charmander"
-        app:layout_constraintTop_toBottomOf="@+id/title"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/charmander"
         app:srcCompat="@drawable/squirtle" />
 
     <ImageButton
         android:id="@+id/bulbasaur"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="4dp"
-        android:layout_marginRight="4dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
         android:background="@color/Grass"
         android:contentDescription="@string/bulbasaur"
         android:onClick="setGrass"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/squirtle"
         app:srcCompat="@drawable/bulbasaur" />
 
     <TextView
         android:id="@+id/Operand_Result"
         android:layout_width="210dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="384dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
+        android:layout_marginTop="176dp"
+        android:layout_marginEnd="296dp"
+        android:layout_marginRight="296dp"
         android:alpha=".7"
         android:background="@android:color/background_light"
         android:text="@string/operand_1_and_result"
@@ -90,8 +86,8 @@
         android:id="@+id/edit_text1"
         android:layout_width="210dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
+        android:layout_marginEnd="296dp"
+        android:layout_marginRight="296dp"
         android:alpha=".7"
         android:background="@color/Fire"
         android:importantForAutofill="no"
@@ -106,8 +102,8 @@
         android:id="@+id/Operand2"
         android:layout_width="210dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
+        android:layout_marginEnd="296dp"
+        android:layout_marginRight="296dp"
         android:alpha=".7"
         android:background="@android:color/background_light"
         android:text="@string/operand_2"
@@ -121,8 +117,8 @@
         android:id="@+id/edit_text2"
         android:layout_width="210dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
+        android:layout_marginEnd="296dp"
+        android:layout_marginRight="296dp"
         android:alpha=".7"
         android:background="@color/Fire"
         android:importantForAutofill="no"
@@ -137,9 +133,9 @@
         android:id="@+id/button1"
         android:layout_width="50dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="348dp"
+        android:layout_marginStart="468dp"
+        android:layout_marginLeft="468dp"
+        android:layout_marginTop="144dp"
         android:alpha="0.7"
         android:onClick="addition"
         android:text="@string/addition"
@@ -153,7 +149,7 @@
         android:id="@+id/button2"
         android:layout_width="50dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="348dp"
+        android:layout_marginTop="144dp"
         android:alpha="0.7"
         android:onClick="subtraction"
         android:text="@string/subtraction"
@@ -167,9 +163,8 @@
         android:id="@+id/button3"
         android:layout_width="50dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginStart="468dp"
+        android:layout_marginLeft="468dp"
         android:alpha="0.7"
         android:onClick="multiplication"
         android:text="@string/multiplication"
@@ -183,7 +178,6 @@
         android:id="@+id/button4"
         android:layout_width="50dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
         android:alpha="0.7"
         android:onClick="division"
         android:text="@string/division"
@@ -197,7 +191,6 @@
         android:id="@+id/button5"
         android:layout_width="50dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
         android:alpha="0.7"
         android:onClick="exponential"
         android:text="@string/exponential"
@@ -210,9 +203,8 @@
         android:id="@+id/button6"
         android:layout_width="50dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginStart="468dp"
+        android:layout_marginLeft="468dp"
         android:alpha="0.7"
         android:onClick="square_root"
         android:text="@string/square_root"
